--- a/css/creative.css
+++ b/css/creative.css
@@ -12,11 +12,16 @@ body {
 
 body {
     font-family: Merriweather,'Helvetica Neue',Arial,sans-serif;
+    
+/*    -webkit-transform: translate3d(0, 0, 0);
+    -ms-transform: translate3d(0, 0, 0);
+    transform: translate3d(0, 0, 0);
+*/    
 }
 
 hr {
-    max-width: 50px;
-    border-color: #f05f40;
+    max-width: 500px;
+    border-color: rgba(255,255,255,0.2);
     border-width: 3px;
 }
 
@@ -52,7 +57,7 @@ p {
 }
 
 .bg-primary {
-    background-color: #f05f40;
+    background-color: #337ab7;
 }
 
 .bg-dark {
@@ -90,13 +95,13 @@ aside {
     font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;
     font-weight: 700;
     color: #6D98CA;
-    color: #000;
+    color: rgba(0,0,0,0.9);
 }
 
 .navbar-default .navbar-header .navbar-brand:hover,
 .navbar-default .navbar-header .navbar-brand:focus {
     color: #eb3812;
-    color: #000;
+    color: rgba(0,0,0,0.9);
 }
 
 .navbar-default .nav > li>a,
@@ -109,12 +114,12 @@ aside {
 
 .navbar-default .nav > li>a:hover,
 .navbar-default .nav>li>a:focus:hover {
-    color: #f05f40;
+    color: rgba(0,0,0,0.9);
 }
 
 .navbar-default .nav > li.active>a,
 .navbar-default .nav>li.active>a:focus {
-    color: #f05f40!important;
+    color: #6D98CA!important;
     background-color: transparent;
 }
 
@@ -142,13 +147,13 @@ aside {
 
     .navbar-default .nav > li>a,
     .navbar-default .nav>li>a:focus {
-        color: rgba(255,255,255,.7);
         color: #000;
+        color: rgba(0,0,0,0.5);
     }
 
     .navbar-default .nav > li>a:hover,
     .navbar-default .nav>li>a:focus:hover {
-        color: #fff;
+      color: rgba(0,0,0,0.9);
     }
 
     .navbar-default.affix {
@@ -158,13 +163,14 @@ aside {
 
     .navbar-default.affix .navbar-header .navbar-brand {
         font-size: 14px;
-        color: #f05f40;
-        color: #6D98CA;
+/*        color: #f05f40;
+*/        color: #6D98CA;
     }
 
     .navbar-default.affix .navbar-header .navbar-brand:hover,
     .navbar-default.affix .navbar-header .navbar-brand:focus {
-        color: #eb3812;
+/*        color: #eb3812;
+*/        color: #6D98CA;
     }
 
     .navbar-default.affix .nav > li>a,
@@ -174,7 +180,8 @@ aside {
 
     .navbar-default.affix .nav > li>a:hover,
     .navbar-default.affix .nav>li>a:focus:hover {
-        color: #f05f40;
+/*        color: #f05f40;
+*/        color: #6D98CA;
     }
 }
 
@@ -281,11 +288,14 @@ header .header-content .header-content-inner p {
     color: #fff;
     opacity: 0;
     background-color: rgba(109, 152, 202, 0.7);
+    -webkit-text-stroke-width: 1px;
+    -webkit-text-stroke-color: transparent;
     
     /*background: rgba(240,95,64,.9);*/
     -webkit-transition: all .35s;
     -moz-transition: all .35s;
     transition: all .35s;
+    
 }
 
 .portfolio-box .portfolio-box-caption .portfolio-box-caption-content {
@@ -313,7 +323,7 @@ header .header-content .header-content-inner p {
 }
 
 .portfolio-box:hover .portfolio-box-caption {
-    opacity: 1;
+    opacity: 0.9;
 }
 
 @media(min-width:768px) {
@@ -331,7 +341,7 @@ header .header-content .header-content-inner p {
 }
 
 .text-primary {
-    color: #f05f40;
+    color: #6D98CA;
 }
 
 .no-gutter > [class*=col-] {
@@ -493,4 +503,12 @@ OVERRIDES
 .carousel-inner>.item>a>img, .carousel-inner>.item>img, .img-responsive, .thumbnail a>img, .thumbnail>img {
   height: 350px;
   width: 650px;
+}
+.text-center {
+  text-align: center;
+}
+
+#footer {
+  color: rgba(0,0,0,0.3);
+  text-transform: uppercase;
 }
